Breaking Change:   1. 添加了一种新的协议，该协议可以支持tool消息以content数组发送。   2. 工具调用链路添加新的类用来存储多模态工具信息。   3. 移动 standard 协议的包名，适配器的 class 路径要重新更新
BTW，添加这个协议的支持主要是为了让截图等行为能直接进入有视觉模型的眼睛里，避免转译带来的信息损失